[gd_scene load_steps=6 format=3 uid="uid://driwak3eok3gy"]

[ext_resource type="Script" uid="uid://dms5jiyis63yv" path="res://scenes/bullets/player_bullet.gd" id="1_3s4ta"]
[ext_resource type="Texture2D" uid="uid://lj0q8273oj2b" path="res://sprites/bullets/test_bullet.png" id="2_j6rts"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d1cmj"]
radius = 3.0
height = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_d0b36"]

[sub_resource type="Gradient" id="Gradient_3s4ta"]
colors = PackedColorArray(1, 1, 1, 1, 0.310617, 0.310617, 0.310617, 1)

[node name="Player-bullet" type="Area2D"]
collision_layer = 0
collision_mask = 13
script = ExtResource("1_3s4ta")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_j6rts")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_d1cmj")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, -24)
collision_mask = 13

[node name="Explosion" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion"]
scale = Vector2(13, 13)
shape = SubResource("CircleShape2D_d0b36")

[node name="ExplosionParticles" type="CPUParticles2D" parent="Explosion"]
emitting = false
amount = 256
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 260.0
scale_amount_min = 3.0
scale_amount_max = 3.0
color = Color(0.958869, 0.431254, 0, 1)
color_initial_ramp = SubResource("Gradient_3s4ta")

[node name="RailCast" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(0, -1000)

[node name="Line2D" type="Line2D" parent="RailCast"]
points = PackedVector2Array(0, 0, 0, 0)
default_color = Color(0, 1, 1, 1)

[node name="RailParticles" type="CPUParticles2D" parent="RailCast"]
visible = false
amount = 256
emission_shape = 3
emission_rect_extents = Vector2(1, 100)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_collision_timer_timeout"]
[connection signal="body_entered" from="Explosion" to="." method="_on_explosion_body_entered"]
